<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.jetpackpro.ui.movie.DetailMovieActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="356dp"
        android:id="@+id/app_bar"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="fitXY"
                android:id="@+id/imgBanner"
                app:srcCompat="@drawable/ic_loading"
                app:layout_collapseMode="parallax"/>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin">

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:visibility="gone">
            </ProgressBar>

            <TextView
                android:id="@+id/titleDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:text="Hello World!"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/labelOL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleDetail"
                android:layout_alignParentStart="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/labelOriginalLanguage"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                app:srcCompat="@drawable/ic_date_range_black_24dp" />

            <TextView
                android:id="@+id/tanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/labelOL"
                android:layout_alignStart="@+id/labelOL"
                android:layout_marginStart="-26dp"
                android:layout_marginTop="10dp"
                android:text="@string/tanggal"
                android:textColor="@color/colorTextSecondary"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/labeltimeDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_watch_later_black_24dp"
                android:layout_below="@+id/titleDetail"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:text="@string/LabelTimeDuration"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/timeDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/labeltimeDetail"
                android:layout_alignEnd="@+id/labeltimeDetail"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="-20dp"
                android:text="@string/time"
                android:textColor="@color/colorTextSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/stars"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_toStartOf="@+id/labeltimeDetail"
                android:layout_toEndOf="@+id/labelOL"
                android:text="7.0"
                android:textAlignment="center"
                android:textColor="@color/colorTextSecondary"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleDetail"
                android:layout_marginTop="15dp"
                android:layout_toStartOf="@+id/labeltimeDetail"
                android:layout_toEndOf="@+id/labelOL"
                app:srcCompat="@drawable/ic_stars_" />

            <ImageView
                android:id="@+id/imagepople"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tanggal"
                android:layout_alignParentStart="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/ic_people_black_24dp" />

            <ImageView
                android:id="@+id/imageglobe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/timeDetail"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                app:srcCompat="@drawable/ic_language_black_24dp" />

            <TextView
                android:id="@+id/people_popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imagepople"
                android:layout_alignStart="@+id/imagepople"
                android:layout_marginStart="-18dp"
                android:layout_marginTop="10dp"
                android:text="popularity" />

            <TextView
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageglobe"
                android:layout_alignEnd="@+id/imageglobe"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="6dp"
                android:text="en" />

            <TextView
                android:id="@+id/LabelUNiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vote_average"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="120dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:text="Overview"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LabelUNiv"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="10dp"
                android:text="Lorem imsum" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favoriteTap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_no_favorite" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
