<resources>
    <string name="app_name">M-TV Catalogue</string>
    <string name="title_activity_detail_movie">DetailMovieActivity</string>
    <!-- Strings used for fragments for navigation -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="moviee">List Movie</string>
    <string name="title">Title</string>
    <string name="daterealesed">Date Realesed</string>
    <string name="realesed">Status</string>
    <string name="title_activity_detail_tvshow">Detail Tv Show</string>
    <string name="labelOriginalLanguage">Original Languege</string>
    <string name="LabelTimeDuration">Time Duration</string>
    <string name="time">000 minutes</string>
    <string name="shared">Shared</string>
    <string name="share_text">for know about this film:</string>
    <string name="tanggal">1999-09-20</string>
    <string name="favorite_movie_title">List Favorite Movie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="tv_show_title">List Tv Show</string>
    <string name="tv_show_favorite_tile">List Tv Show Favorite</string>
</resources>
